[gd_scene load_steps=9 format=3 uid="uid://qoqc7bh2rmpo"]

[ext_resource type="Script" path="res://scenes/Enemies/jare/jaré.gd" id="1_jhko1"]
[ext_resource type="Texture2D" uid="uid://c1vs0rtamjh3p" path="res://assets/sprites/JareStop.png" id="2_3o5dn"]
[ext_resource type="PackedScene" uid="uid://dwpf8re4uiwwh" path="res://scenes/Killzone/killzone.tscn" id="3_12tfs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r8k3r"]
atlas = ExtResource("2_3o5dn")
region = Rect2(0, 20, 50, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7kmt"]
atlas = ExtResource("2_3o5dn")
region = Rect2(50, 20, 50, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_tt441"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8k3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7kmt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02yop"]
size = Vector2(41, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryvxf"]
size = Vector2(20, 9)

[node name="Jaré" type="CharacterBody2D" groups=["inimigos"]]
script = ExtResource("1_jhko1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_tt441")
autoplay = "default"
frame_progress = 0.166942
flip_h = true

[node name="Killzone" parent="." instance=ExtResource("3_12tfs")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_02yop")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(22, 1)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(-22, 0)

[node name="Hitbox" type="Area2D" parent="." groups=["inimigos"]]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_02yop")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_ryvxf")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
